--- a/app/src/main/res/layout/activity_coupons_pay.xml
+++ b/app/src/main/res/layout/activity_coupons_pay.xml
@@ -72,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_above="@+id/submit"
+        android:layout_above="@+id/ll"
         android:layout_below="@+id/relativeLayout">
 
         <android.support.v7.widget.RecyclerView
